# flutter_iot

./: .gitignore  README.md  justfile  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutter_rust_bridge_template/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
lib/: bridge_generated.dart  bridge_generated.io.dart  ffi.dart  ffi_web.dart
lib/native/: bridge_definitions.dart  bridge_generated.web.dart
lib/rust_security/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml
native/src/: api.rs  bridge_generated.rs  bridge_generated.web.rs
rust-security/: Cargo.toml
rust-security/rust-security.xcodeproj/: project.pbxproj
rust-security/src/: bridge_generated.rs  lib.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
