[package]
name = "rust-security"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "1"
base64 = "0.21"
rand = "0.8"
rsa = "0.8"
sha2 = "0.10"
